# amazon-mlops-dashboard

./: .gitignore  api_queries.json  project_structure.txt  pyproject.toml  scrap_data.py  todo.md
data/api-calls/: all_tenis_products.json  page_1_tenis_products.json  prod_details_us.json  product_list_us.json  tenis_products_0.json  tenis_products_1.json  tenis_products_10.json  tenis_products_11.json  tenis_products_12.json  tenis_products_13.json  tenis_products_14.json  tenis_products_15.json  tenis_products_16.json  tenis_products_17.json  tenis_products_18.json  tenis_products_19.json  tenis_products_2.json  tenis_products_20.json  tenis_products_21.json  tenis_products_22.json  tenis_products_23.json  tenis_products_24.json  tenis_products_25.json  tenis_products_26.json  tenis_products_27.json  tenis_products_28.json  tenis_products_29.json  tenis_products_3.json  tenis_products_30.json  tenis_products_31.json  (+26 more)
models/: tennis_demand_model.pkl  tennis_demand_model_original.pkl
notebooks/: augment_data.ipynb  data_augmentation.ipynb  data_preprocessing_testing.ipynb  distributions.json  distributions_estimation.ipynb  eda.ipynb  explore_api_output.ipynb  feature_engineering_and_regression.ipynb  format_data.ipynb  mlflow_tennis.ipynb  predict_tennis_demand.ipynb  tennis_demand.ipynb
src/: api_client.py  api_fetcher.py  config.py  data_ingestion.py  data_preprocessing.py  deprecated_process.py  deprecated_test.py  pipeline.py  predict.py  process.py  temp.ipynb  train.py  xd.py
streamlit_app/: plot_demo.py  streamlit.ipynb
tests/: test_train_model.py
(+48 files in other folders)
