[tool.poetry]
name = "amazon-mlops-dashboard"
version = "0.1.0"
description = ""
authors = ["santiagoal"]

[tool.poetry.dependencies]
python = "^3.9"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
prefect = "^2.7.6"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
joblib = "^1.2.0"
datetime = "^5.5"
pydantic = "^2.8.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
mmct = "^1.1.3"
fitter = "^1.7.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
